--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+  html,
+  body {
+    @apply h-full;
+  }
+  #root {
+    @apply h-full;
+    @apply md:h-auto;
+  }
+  body {
+    @apply font-roboto;
+    @apply text-dark-slate-grey;
+    @apply text-base;
+    @apply bg-charcoal-grey;
+    @apply md:flex;
+    @apply md:flex-col;
+    @apply md:justify-center;
+  }
+  h1 {
+    @apply text-4xl;
+    @apply md:text-6xl;
+    @apply font-bold;
+  }
+  ul {
+    @apply list-image-check-icon;
+    @apply list-outside;
+    @apply pl-8;
+  }
+  li {
+    @apply pl-2;
+  }
+  li:not(:last-child) {
+    @apply mb-2;
+  }
 }
